--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div>
           <h1 class="header-1 ">
-            <img src="images/Sudheer.png" alt="" class="img-fluid">
+            <img src="images/lg logo.png" alt="" class="img-fluid">
           </h1>
         </div>
         <div class="navbar-collapse fs-6 fw-bolder text-center mt-3" id="navbarNav">
