--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div>
           <h1 class="header-1 ">
-            <img src="images/lg logo.png" alt="" class="img-fluid">
+            <img src="images/lg 1.png" alt="" class="img-fluid">
           </h1>
         </div>
         <div class="navbar-collapse fs-6 fw-bolder text-center mt-3" id="navbarNav">
@@ -75,7 +75,7 @@
     <div class="container ">
       <div class="row">
         <div class="col-sm-1 col-md-6">
-          <h1 class="intro-heading">Hello&comma; I'm Sudheer&period;</h1>
+          <h1 class="intro-heading">Hello&comma; I'm Ladi&period;</h1>
           <P class="lead text-light text-start fs-3 fw-lighter my-5">I'm a Marketing & Digital Marketing <br>
             Freelancer.
             With a great passion
