--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
       <div class="row">
         <div class="col-sm-1 col-md-6">
           <h1 class="intro-heading">Hello&comma; I'm Ladi&period;</h1>
-          <P class="lead text-light text-start fs-3 fw-lighter my-5">I'm a Marketing & Digital Marketing <br>
-            Freelancer.
-            With a great passion
-            about real <br> and honest business conversations.</P>
+          <P class="lead text-light text-start fs-3 fw-lighter my-5">I'm Ladi, a growth hacking enthusiast<br>
+            with 7+ years of experience.<br> Let's turbocharge your business!</P>
           <a href="#work" class="intro-btn btn fs-6 fw-semibold">HOW I CAN HELP</a>
         </div>
         <div class="col-sm-1 offset-sm-2 col-md-6 offset-md-0">
@@ -229,8 +227,8 @@
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
-                  <div id="emailError" class="error"></div>
+                  <input type="text" class="form-control" id="name" name="name" placeholder="Company Name" required>
+                  <div id="nameError" class="error"></div>
                 </div>
               </div>
             </div>
@@ -243,8 +241,8 @@
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <input type="text" class="form-control" id="address" name="address" placeholder="Address" required>
-                  <div id="addressError" class="error"></div>
+                  <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+                  <div id="emailError" class="error"></div>
                 </div>
               </div>
             </div>
