--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Ladi's Page</title>
+  <title>Ladi Growth</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet"
@@ -24,17 +24,17 @@
       <nav class="navbar navbar-expand-lg d-flex flex-column align-items-center justify-content-center">
         <div class=" d-flex flex-row align-items-center justify-content-center my-3">
           <div class="p-2 px-4">
-            <a href="#" class="icon md">
+            <a href="https://wa.me/9036339469" target="_blank" class="icon md">
               <i class="fa-brands fa-whatsapp fs-3 social-icons"></i>
             </a>
           </div>
           <div class="p-2 px-4">
-            <a href="#" class="icon md">
+            <a href="mailto: patrasudheer30@gmail.com" target="_blank" class="icon md">
               <i class="fa-regular fa-envelope fs-3 social-icons"></i>
             </a>
           </div>
           <div class="p-2 px-4">
-            <a href="#" class="icon md">
+            <a href="https://www.linkedin.com/in/ladi-sudheer-patra-723020b8" target="_blank" class="icon md">
               <i class="fa-brands fa-linkedin-in fs-3 social-icons"></i>
             </a>
           </div>
@@ -75,10 +75,9 @@
     <div class="container ">
       <div class="row">
         <div class="col-sm-1 col-md-6">
-          <h1 class="intro-heading">Hello&comma; I'm Ladi&period;</h1>
-          <P class="lead text-light text-start fs-3 fw-lighter my-5">I'm Ladi, a growth hacking enthusiast<br>
-            with 7+ years of experience.<br> Let's turbocharge your business!</P>
-          <a href="#work" class="intro-btn btn fs-6 fw-semibold">HOW I CAN HELP</a>
+          <P class="lead text-dark text-start fs-3 fw-lighter my-5">Experience Exponential Growth:<br>
+            Partner with Us to Ignite Your Business<br> and Unlock Unlimited Potential</P>
+          <a href="#contact" class="intro-btn btn fs-6 fw-semibold">GET IN TOUCH</a>
         </div>
         <div class="col-sm-1 offset-sm-2 col-md-6 offset-md-0">
           <img src="/images/bgimage00.png" alt="" class="img-fluid mt-5">
@@ -129,7 +128,9 @@
               <span class="w-auto px-5 d-flex align-items-center justify-content-center">
                 <h4 class="text-muted">Growth Hacking</h4>
               </span>
-              <button type="button" class="btn btn-light text-warning fw-bold mt-2">See Services</button>
+              <a href="/services/service1/index.html">
+                <button type="button" class="btn btn-light text-warning fw-bold mt-2">See Services</button>
+              </a>  
             </div>
             <div class="services-card col-md-4 mb-4">
               <img src="images/sem.png" alt="service1" class="services-img">
@@ -137,7 +138,9 @@
                 <h4 class="text-muted">SEM</h4>
               </span>
 
-              <button type="button" class="btn btn-light text-warning fw-bold mt-2">See Services</button>
+              <a href="/services/service2/index.html">
+                <button type="button" class="btn btn-light text-warning fw-bold mt-2">See Services</button>
+              </a>
             </div>
             <div class="services-card col-md-4 mb-4">
               <img src="images/social-media-marketing.png" alt="service1" class="services-img">
@@ -145,7 +148,9 @@
                 <h4 class="text-muted">Social Media Marketing</h4>
               </span>
 
-              <button type="button" class="btn btn-light text-warning fw-bold mt-2">See Services</button>
+              <a href="/services/service3/index.html">
+                <button type="button" class="btn btn-light text-warning fw-bold mt-2">See Services</button>
+              </a>
             </div>
           </div>
 
