changed styling in services

--- a/services/service2/index.html
+++ b/services/service2/index.html
@@ -14,11 +14,11 @@
     </head>
 <body>
     <!--  HEADING -->
-    <section>
+    <section id="heading">
+
         <div class="heading_container container">
             <a href="/#Services" class="back-mainpage">&larr; Back To Main Page</a>
             <h1 class="main_title">Search Engine Marketing (SEM)</h1>
-            <img src="/images/wave1.png" class="top_img">
 
         </div>
     </section>
@@ -32,7 +32,6 @@
 
     <!-- Services -->
     <section id="services">
-        <img src="/images/wave3.png" alt="" class="services_img" />
         <div class="services_container">
             <h2>Services in Search Engine Marketing (SEM)</h2>
             <div class="row">
@@ -67,7 +66,6 @@
                 </div>
             </div>
         </div>
-        <img src="/images/wave1.png" alt="" class="services_img2"/>
     </section>
     
 </body>
