--- a/services/service1/index.html
+++ b/services/service1/index.html
@@ -19,11 +19,11 @@
   </head>
   <body>
     <!--  HEADING -->
-    <section>
+    <section id="heading">
+
       <div class="heading_container container">
         <a href="/#Services" class="back-mainpage">&larr; Back To Main Page</a>
         <h1 class="main_title">Growth Hacking</h1>
-        <img src="/images/wave1.png" class="top_img" />
       </div>
     </section>
 
@@ -47,7 +47,6 @@
 
     <!-- Services -->
     <section id="services">
-      <img src="/images/wave3.png" alt="" class="services_img" />
       <div class="services_container">
         <h2>Services in Growth Hacking</h2>
         <div class="row">
@@ -97,7 +96,6 @@
           </div>
         </div>
       </div>
-      <img src="/images/wave1.png" alt="" class="services_img2" />
     </section>
    
     <footer class="footer-distributed">
