--- a/services/service3/index.html
+++ b/services/service3/index.html
@@ -13,11 +13,10 @@
     </head>
 <body>
     <!--  HEADING -->
-    <section>
+    <section id="heading">
         <div class="heading_container container">
             <a href="/#Services" class="back-mainpage">&larr; Back To Main Page</a>
             <h1 class="main_title">Social Media Marketing</h1>
-            <img src="/images/wave1.png" class="top_img">
 
         </div>
     </section>
@@ -31,7 +30,6 @@
 
     <!-- Services -->
     <section id="services">
-        <img src="/images/wave3.png" alt="" class="services_img" />
         <div class="services_container">
             <h2>Services in Social Media Marketing</h2>
             <div class="row">
@@ -66,7 +64,6 @@
                 </div>
             </div>
         </div>
-        <img src="/images/wave1.png" alt="" class="services_img2"/>
     </section>
 </body>
 
