--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           <h2 class="display-5 text-center text-black text-decoration-underline fw-bold">Get In Touch</h2>
         </div>
         <div class="container mt-5">
-          <form action="https://script.google.com/macros/s/AKfycbxsXscoaA8bP8Eaggwx9IrORGqxwur4CHr9m7oqOtsnp0MAB-VsUaPWSFSVtyhX9YqI/exec" id="myForm" method="POST">
+          <form id="myForm" method="POST">
             <div class="row mb-2">
               <div class="col-md-6">
                 <div class="form-group">
