--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body>
   <section class=" position-relative">
     <div class="nav-bar">
+      <svg class="waves" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 280"><path fill="#fff" fill-opacity="1" d="M0,192L48,170.7C96,149,192,107,288,128C384,149,480,235,576,245.3C672,256,768,192,864,186.7C960,181,1056,235,1152,245.3C1248,256,1344,224,1392,208L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
       <nav class="navbar navbar-expand-lg d-flex flex-column align-items-center justify-content-center">
         <div class=" d-flex flex-row align-items-center justify-content-center my-3">
           <div class="p-2 px-4">
@@ -42,6 +43,7 @@
         <div>
           <h1 class="header-1 ">
             <img src="images/lg 1.png" alt="" class="img-fluid">
+            
           </h1>
         </div>
         <div class="navbar-collapse fs-6 fw-bolder text-center mt-3" id="navbarNav">
@@ -63,7 +65,7 @@
             </li>
           </ul>
         </div>
-        <img src="images/wave.png" alt="" class="bottom-img">
+        <!-- <img src="images/wave.png" alt="" class="bottom-img"> -->
       </nav>
     </div>
     </div>
@@ -72,6 +74,7 @@
 
   <!-- intro part -->
   <section class="intro-part">
+
     <div class="container ">
       <div class="row">
         <div class="col-sm-1 col-md-6">
@@ -85,10 +88,10 @@
       </div>
 
     </div>
-    <img src="images/wave1.png" alt="" class="img-fluid">
+    
+  <!-- <img src="images/wave1.png" alt="" class="img-fluid"> -->
   </section>
-
-  <!-- About Me -->
+    <!-- About Me -->
   <section id="about" class=" py-5">
     <div class="container">
       <h2 class="display-5 text-center fw-bold text-decoration-underline">About Me</h2>
@@ -157,7 +160,7 @@
         </div>
       </div>
     </div>
-    <img src="images/wave1.png" alt="" class="img-fluid">
+     <img src="images/wave1.png" alt="" class="img-fluid">
   </section>
 
 
@@ -172,11 +175,11 @@
         <div class="row p-4">
           <div class="col-md-4 mb-5">
             <div class="card">
-              <img src="./images/blog1.png" class="card-img-top" alt="Blog Post Image">
+              <img src="./images/GH.png" class="card-img-top" alt="Blog Post Image">
               <div class="card-body">
-                <h4 class="card-title text-muted fw-bolder">The Power of Growth Hacking💥</h4>
-                <p class="card-text text-white fw-medium">Welcome to Ladi Growth! 🚀 We're here to help you drive
-                  business growth through innovative strategies and cutting-edge techniques</p>
+                <h4 class="card-title text-muted fw-bolder">Growth Hacking💥</h4>
+                <p class="card-text text-white fw-medium"> We're here to help you drive
+                  business growth through innovative strategies & cutting-edge techniques</p>
                 <a href="blogs/blog1/index.html" class="btn btn-light fw-bold text-warning">Read More</a>
               </div>
             </div>
@@ -184,10 +187,10 @@
 
           <div class="col-md-4 mb-5">
             <div class="card">
-              <img src="./images/blog2.png" class="card-img-top" alt="Blog Post Image">
+              <img src="./images/a3.png" class="card-img-top" alt="Blog Post Image">
               <div class="card-body">
-                <h4 class="card-title text-muted fw-bold">Supercharge Your Business with Growth Funnel</h4>
-                <p class="card-text-2 text-white fw-medium">One powerful framework we utilize is the A3R3 Growth Funnel.
+                <h4 class="card-title text-muted fw-bold">Growth Funnel</h4>
+                <p class="card-text-2 text-white fw-medium">Framework we utilize is the A3R3 Growth Funnel.
                   Let's dive into how the A3R3 Growth Funnel can revolutionize your business growth strategy! </p>
                 <a href="./blogs/blog2/index.html" class="btn btn-light fw-bold text-warning">Read More</a>
               </div>
@@ -196,12 +199,11 @@
 
           <div class="col-md-4 mb-5">
             <div class="card">
-              <img src="./images/blog3.png" class="card-img-top" alt="Blog Post Image">
+              <img src="./images/sem.png" class="card-img-top" alt="Blog Post Image">
               <div class="card-body">
                 <h4 class="card-title text-muted fw-bold">Search Engine Marketing (SEM)</h4>
-                <p class="card-text-3 text-white fw-medium">In today's digital age, having a strong online presence is
-                  crucial for the success of any business. With millions of websites competing for attention, how can
-                  you ensure your business stands out?</p>
+                <p class="card-text-3 text-white fw-medium">With millions of websites competing for attention, how can
+                  you ensure your business stands out over SEM?</p>
                 <a href="./blogs/blog3/index.html" class="btn btn-light fw-bold text-warning">Read More</a>
               </div>
             </div>
