--- a/thankyou/index.html
+++ b/thankyou/index.html
@@ -11,7 +11,9 @@
         <img src="/images/tick.png">
         <h2>Thank You!</h2>
         <p>Your details has been successfully submitted. Thanks!</p>
-        <button type="button" onclick="closePopup()">OK</button>
+        <a href="/index.html">
+            <button type="button">OK</button>
+        </a>
       </div> 
 </body>
 </html>
