--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
               <div class="services-card col-md-4 mb-4">
 
-                <img src="images/sem.png" alt="service1" class="services-img">
+                <img src="images/services.sem.jpg" alt="service1" class="services-img">
 
                 <span class="w-auto px-5 d-flex align-items-center justify-content-center">
 
@@ -733,6 +733,8 @@
     </footer>
 
     <script src="/script.js"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-55KS37KVQL"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-55KS37KVQL'); </script>
 
     <script>
 
