--- a/blogs/blog1/index.html
+++ b/blogs/blog1/index.html
@@ -13,6 +13,8 @@
         })(window,document,'script','dataLayer','GTM-T3L54W6');</script>
         <!-- End Google Tag Manager -->
 
+        <meta name="facebook-domain-verification" content="zfbv3xpyaeauz5xlxq9cyqlfbqc2zy" />
+
     <title>THE POWER OF GROWTH HACKING</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
