--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-T3L54W6');</script>
     <!-- End Google Tag Manager -->
+
+    <meta name="facebook-domain-verification" content="zfbv3xpyaeauz5xlxq9cyqlfbqc2zy" />
    
 
     <title>Ladi Growth</title>
