--- a/services/service3/index.html
+++ b/services/service3/index.html
@@ -12,6 +12,8 @@
             })(window,document,'script','dataLayer','GTM-T3L54W6');</script>
             <!-- End Google Tag Manager -->
 
+            <meta name="facebook-domain-verification" content="zfbv3xpyaeauz5xlxq9cyqlfbqc2zy" />
+
         <title>Social Media Marketing</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet"
