--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
 
           <div class="col-sm-1 col-md-6">
 
-            <P class="lead text-dark text-start fs-3 fw-lighter my-5">Experience Exponential Growth:<br>
+            <P class="lead text-dark text-start fs-3 fw-lighter my-5">Welcome to LadiGrowth!<br>
 
-              Partner with Us to Ignite Your Business<br> and Unlock Unlimited Potential</P>
+              We are your dedicated growth hacking consultancy, fueled by cutting-edge techniques to supercharge your business growth.</P>
 
             <a href="#contact" class="intro-btn btn fs-6 fw-semibold">GET IN TOUCH</a>
 
