--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
                 </span>
 
-                <a href="/services/service1/index.html">
+                <a href="/services/Growth-Hacking/index.html">
 
                   <button type="button" class="btn btn-light text-warning fw-bold mt-2">See Services</button>
 
@@ -319,7 +319,7 @@
 
 
 
-                <a href="/services/service2/index.html">
+                <a href="/services/SEM/index.html">
 
                   <button type="button" class="btn btn-light text-warning fw-bold mt-2">See Services</button>
 
@@ -340,7 +340,7 @@
 
 
 
-                <a href="/services/service3/index.html">
+                <a href="/services/Social-Media-Marketing/index.html">
 
                   <button type="button" class="btn btn-light text-warning fw-bold mt-2">See Services</button>
 
@@ -404,7 +404,7 @@
 
                     your business</p>
 
-                  <a href="blogs/blog1/index.html" class="btn btn-light fw-bold text-warning">Read More</a>
+                  <a href="blogs/Growth-Hacking/index.html" class="btn btn-light fw-bold text-warning">Read More</a>
 
                 </div>
 
@@ -431,7 +431,7 @@
 
                     how their customers move through the marketing and sales process. It consists of six stages </p>
 
-                  <a href="./blogs/blog2/index.html" class="btn btn-light fw-bold text-warning">Read More</a>
+                  <a href="./blogs/Growth-Funnel/index.html" class="btn btn-light fw-bold text-warning">Read More</a>
 
                 </div>
 
@@ -458,7 +458,7 @@
 
                     advertising.</p>
 
-                  <a href="./blogs/blog3/index.html" class="btn btn-light fw-bold text-warning">Read More</a>
+                  <a href="./blogs/SEM/index.html" class="btn btn-light fw-bold text-warning">Read More</a>
 
                 </div>
 
